version/0.7/_sources/api/_autosummary/ansys.meshing.prime.ExportMapdlCdbParams.rst.txt
.. vale off

ExportMapdlCdbParams
====================

.. currentmodule:: ansys.meshing.prime

.. autoclass:: ExportMapdlCdbParams
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ExportMapdlCdbParams.print_default
      ExportMapdlCdbParams.set_default
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ExportMapdlCdbParams.analysis_settings
      ExportMapdlCdbParams.analysis_settings_file_name
      ExportMapdlCdbParams.analysis_type
      ExportMapdlCdbParams.boundary_conditions
      ExportMapdlCdbParams.config_settings
      ExportMapdlCdbParams.consider_general_connectors_as_spot_weld
      ExportMapdlCdbParams.contact_element_types
      ExportMapdlCdbParams.enable_face_based_labels
      ExportMapdlCdbParams.export_fasteners_as_swgen
      ExportMapdlCdbParams.export_rigid_bodies_as_rbgen
      ExportMapdlCdbParams.material_properties
      ExportMapdlCdbParams.pre_solution_settings
      ExportMapdlCdbParams.simulation_type
      ExportMapdlCdbParams.use_compact_format
      ExportMapdlCdbParams.write_by_zones
      ExportMapdlCdbParams.write_cells
      ExportMapdlCdbParams.write_thickness_file
   
   

.. minigallery::
    :add-heading: Examples using ExportMapdlCdbParams

    ansys.meshing.prime.ExportMapdlCdbParams

.. vale on